--- a/website/_includes/donate-modal.html
+++ b/website/_includes/donate-modal.html
@@ -36,30 +36,36 @@
           <label class="uppercase font-sm">{{ _('Select an amount') }}</label>
           <label>
             {{ _('Currency') }}
-            <select id="id_currency-switcher" class="rounded inline-block w-24 bg-white p-1 border border-solid border-grey" name="currency-switcher">
+            <select id="currency-switcher" class="rounded inline-block w-24 bg-white p-1 border border-solid border-grey" name="currency-switcher">
               {% for currency, vals in settings.CURRENCIES | dictsort %}
-              <option value="{{ currency }}" {% if currency == this_currency %}selected{% endif %}>{{ currency.upper() }}   {{ vals.symbol.decode('utf-8') }}</option>
+              <option
+                value="{{ currency }}"
+                data-symbol="{{ vals.symbol.decode('utf-8') }}"
+                data-presets="{{ ','.join(vals.presets) }}"
+                {% if currency == this_currency %}selected{% endif %}
+              >
+                {{ currency.upper() }} {{ vals.symbol.decode('utf-8') }}
+              </option>
               {% endfor %}
             </select>
           </label>
         </div>
         <div id="amount-selection" class="amount-selection flex flex-wrap mt-3">
-          <label class="flex items-center shadow-md mb-2 mr-4">
-            <input class="mr-4" type="radio" name="amount" value="{{ this_curdata.presets[0] }}">
-            {{ this_curdata.symbol.decode('utf-8') }}{{ this_curdata.presets[0] }}
-          </label>
-          <label class="flex items-center shadow-md mb-2 mr-4 active">
-            <input class="mr-4" type="radio" name="amount" value="{{ this_curdata.default }}" checked>
-            {{ this_curdata.symbol.decode('utf-8') }}{{ this_curdata.default }}
-          </label>
-          <label class="flex items-center shadow-md mb-2 mr-4">
-            <input class="mr-4" type="radio" name="amount" value="{{ this_curdata.presets[2] }}">
-            {{ this_curdata.symbol.decode('utf-8') }}{{ this_curdata.presets[2] }}
-          </label>
-          <label class="flex items-center shadow-md mb-2 mr-4">
-            <input class="mr-4" type="radio" name="amount" value="{{ this_curdata.presets[3] }}">
-            {{ this_curdata.symbol.decode('utf-8') }}{{ this_curdata.presets[3] }}
-          </label>
+          {% for v in [0,1,2,3] %}
+            <label
+              id="donation-choice-{{ v }}"
+              class="flex items-center shadow-md mb-2 mr-4 {% if this_curdata.presets[v] == this_curdata.default %}active{% endif %}"
+            >
+              <input
+                class="mr-4"
+                type="radio"
+                name="amount"
+                value="{{ this_curdata.presets[v] }}"
+                {% if this_curdata.presets[v] == this_curdata.default %}checked{% endif %}
+              />
+              <span>{{ this_curdata.symbol.decode('utf-8') }}{{ this_curdata.presets[v] }}</span>
+            </label>
+          {% endfor %}
           <label class="flex items-center shadow-md mb-2 flex-grow">
             <input id="amount-other-selection" class="mr-3" type="radio" name="amount" value="0">
             <input id="amount-other" type="number" name="other" placeholder="{{ _('Other amount') }}" min="1" step="1" />
@@ -92,9 +98,7 @@
   </div>
   <!-- step 2: checkout and submit payment -->
   <div id="checkout-container" class="hidden">
-    <h1 class="text-blue-dark text-center font-4xl font-light mb-0">
-      {{ this_curdata.symbol.decode('utf-8') }}<span id="amount-preview"></span>
-    </h1>
+    <h1 id="amount-preview" class="text-blue-dark text-center font-4xl font-light mb-0"></h1>
     <div class="font-lg leading-normal text-center">
       <p class="m-0">{{ _('Donation Amount') }}</p>
     </div>
