--- a/assets/less/base/variables.less
+++ b/assets/less/base/variables.less
@@ -13,6 +13,7 @@
   black-light: #212123;
   black-lighter: #34343A;
   black-lightest: #45454B;
+  grey: #f9f9f9;
   grey-light: #f0f0f0;
   grey-lighter: #fdfdfd;
   blue-dark: #36385A;
@@ -111,7 +112,7 @@
   max-w-md: 28rem;
   max-w-lg: 32rem;
   max-w-xl: 36rem;
-  // max-w-2xl: 42rem;
+  max-w-2xl: 42rem;
   max-w-3xl: 48rem;
   max-w-4xl: 56rem;
   max-w-5xl: 64rem;
