--- a/website/_includes/site-footer.html
+++ b/website/_includes/site-footer.html
@@ -1,5 +1,5 @@
 <footer id="colophon" class="bg-black-light text-white flex flex-col pt-10 pb-8 pl-4 pr-4">
-  <section class="flex flex-col lg:flex-row justify-between items-center self-center w-full max-w-6xl">
+  <section class="flex flex-col lg:flex-col justify-between items-center self-center w-full max-w-6xl">
     <aside class="flex flex-col items-center lg:items-start">
       <a href="{{ url('thunderbird.index') }}" class="block w-40" title="{{ _('Thunderbird') }}"
         alt="{{ _('Thunderbird Vector Wordmark') }}">
@@ -32,23 +32,37 @@
         </ul>
       </nav>
     </aside>
-    <aside class="flex flex-1 flex-col text-right">
-      <ul class="list-none p-0 flex justify-end">
-        <li class="mr-4">
+    <aside class="flex flex-col items-center">
+      <ul class="list-none p-0 flex flex-wrap items-center justify-around">
+        <li class="m-1">
           <a class="social-link font-semibold" title="{{ _('Follow %(twitter)s on Twitter')|format(twitter='@mozthunderbird') }}"
             href="https://twitter.com/mozthunderbird" data-link-type="footer" data-link-name="Twitter (Thunderbird)">
             <span>{{ svg('twitter') }}</span>
             @mozthunderbird
           </a>
         </li>
-        <li class="mr-4">
+        <li class="m-1">
           <a class="social-link font-semibold" href="https://www.facebook.com/Thunderbird/" data-link-type="footer"
             data-link-name="Facebook (Thunderbird)">
             <span>{{ svg('facebook') }}</span>
             {{ _('Thunderbird') }}
           </a>
         </li>
-        <li>
+        <li class="m-1">
+          <a class="social-link font-semibold" title="{{ _('Follow %(youtube)s on YouTube')|format(youtube='@thunderbird3665') }}"
+            href="https://www.youtube.com/channel/UCuMTCmnwZPiXXVIy_TW6Bnw" data-link-type="footer" data-link-name="YouTube (Thunderbird)" rel="me">
+            <span>{{ svg('youtube') }}</span>
+            {{ _('Thunderbird') }}
+          </a>
+        </li>
+        <li class="m-1">
+          <a class="social-link font-semibold" title="{{ _('Follow %(linkedin)s on LinkedIn')|format(linkedin='thunderbird-email')}}"
+            href="https://www.linkedin.com/company/thunderbird-email/" data-link-type="footer" data-link-name="LinkedIn (Thunderbird)" rel="me">
+            <span>{{ svg('linkedin') }}</span>
+            {{ _('Thunderbird') }}
+          </a>
+        </li>
+        <li class="m-1">
           <a class="social-link font-semibold" title="{{ _('Follow %(mastodon)s on Mastodon')|format(mastodon='@thunderbird@mastodon.online') }}"
             href="https://mastodon.online/@thunderbird" data-link-type="footer" data-link-name="Mastodon (Thunderbird)" rel="me">
             <span>{{ svg('mastodon') }}</span>
