--- a/media/css/eoy.css
+++ b/media/css/eoy.css
@@ -59,18 +59,144 @@
 }
 
 :root {
-  --bg: #f9f9fa;
-  --text: #333;
+  --color-red-10: #FEE2E2;
+  --color-red-20: #FECACA;
+  --color-red-30: #FCA5A5;
+  --color-red-40: #f87171;
+  --color-red-50: #ef4444;
+  --color-red-60: #dc2626;
+  --color-red-70: #b91c1c;
+  --color-red-80: #991b1b;
+  --color-red-90: #7f1d1d;
+
+  --color-orange-10: #ffedd5;
+  --color-orange-20: #fed7aa;
+  --color-orange-30: #fdba74;
+  --color-orange-40: #fb923c;
+  --color-orange-50: #f97316;
+  --color-orange-60: #ea580c;
+  --color-orange-70: #c2410c;
+  --color-orange-80: #9a3412;
+  --color-orange-90: #7c2d12;
+
+  --color-amber-10: #fef3c7;
+  --color-amber-20: #fde68a;
+  --color-amber-30: #fcd34d;
+  --color-amber-40: #fbbf24;
+  --color-amber-50: #f59e0b;
+  --color-amber-60: #d97706;
+  --color-amber-70: #b45309;
+  --color-amber-80: #92400e;
+  --color-amber-90: #78350f;
+
+  --color-yellow-10: #fef9c3;
+  --color-yellow-20: #fef08a;
+  --color-yellow-30: #fde047;
+  --color-yellow-40: #facc15;
+  --color-yellow-50: #eab308;
+  --color-yellow-60: #ca8a04;
+  --color-yellow-70: #a16207;
+  --color-yellow-80: #854d0e;
+  --color-yellow-90: #713f12;
+
+  --color-green-10: #dcfce7;
+  --color-green-20: #bbf7d0;
+  --color-green-30: #86efac;
+  --color-green-40: #4ade80;
+  --color-green-50: #22c55e;
+  --color-green-60: #16a34a;
+  --color-green-70: #15803d;
+  --color-green-80: #166534;
+  --color-green-90: #14532d;
+
+  --color-teal-10: #cdfaf7;
+  --color-teal-20: #9ff4f0;
+  --color-teal-30: #62e9e6;
+  --color-teal-40: #27d3d6;
+  --color-teal-50: #0db7bd;
+  --color-teal-60: #0a929d;
+  --color-teal-70: #0e757f;
+  --color-teal-80: #135e67;
+  --color-teal-90: #144e56;
+
+  --color-blue-10: #ddeefe;
+  --color-blue-20: #bce0fd;
+  --color-blue-30: #88ccfc;
+  --color-blue-40: #4cb1f9;
+  --color-blue-50: #2493ef;
+  --color-blue-60: #1373d9;
+  --color-blue-70: #105bbc;
+  --color-blue-80: #124c9a;
+  --color-blue-90: #15427c;
+
+  --color-purple-10: #f3e8ff;
+  --color-purple-20: #e9d5ff;
+  --color-purple-30: #d8b4fe;
+  --color-purple-40: #c084fc;
+  --color-purple-50: #a855f7;
+  --color-purple-60: #9333ea;
+  --color-purple-70: #7e22ce;
+  --color-purple-80: #6b21a8;
+  --color-purple-90: #581c87;
+
+  --color-magenta-10: #fbe7f9;
+  --color-magenta-20: #f8cff3;
+  --color-magenta-30: #f4a9e8;
+  --color-magenta-40: #ee75d7;
+  --color-magenta-50: #e247c4;
+  --color-magenta-60: #cd26a5;
+  --color-magenta-70: #b01a86;
+  --color-magenta-80: #91186e;
+  --color-magenta-90: #79195c;
+
+  --color-brown-10: #f4e9d7;
+  --color-brown-20: #efdfc4;
+  --color-brown-30: #e4cdab;
+  --color-brown-40: #d7bc96;
+  --color-brown-50: #b6986c;
+  --color-brown-60: #96764b;
+  --color-brown-70: #755b38;
+  --color-brown-80: #51412c;
+  --color-brown-90: #47341f;
+
+  --color-gray-05: #fafafa;
+  --color-gray-10: #f4f4f5;
+  --color-gray-20: #e4e4e7;
+  --color-gray-30: #d4d4d8;
+  --color-gray-40: #a1a1aa;
+  --color-gray-50: #71717a;
+  --color-gray-60: #52525b;
+  --color-gray-70: #3f3f46;
+  --color-gray-80: #27272a;
+  --color-gray-90: #18181b;
+
+  --color-ink-10: #f1f3fa;
+  --color-ink-20: #e3e5f2;
+  --color-ink-30: #cdd0e5;
+  --color-ink-40: #9b9ec2;
+  --color-ink-50: #6e6f9b;
+  --color-ink-60: #52507c;
+  --color-ink-70: #3e3c67;
+  --color-ink-80: #2a284b;
+  --color-ink-90: #1a1838;
+
+  --color-white: #ffffff;
+  --color-black: #000000;
+
+  --bg: var(--color-white);
+  --txt: var(--color-ink-70);
+  --bg-img: url('/media/img/thunderbird/backgrounds/forest-bg-light.png');
   --shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
-  --accent-text: #15427C;
+  --accent-text: var(--color-blue-90);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --bg: #2F2F33;
-    --text: #F9F9FA;
+    --bg: var(--color-gray-80);
+    --txt: var(--color-ink-10);
+    --bg-img: url('/media/img/thunderbird/backgrounds/forest-bg-dark.png');
     --shadow: 0 4px 16px rgba(0, 0, 0, 0.3);
-    --accent-text: #DDEEFE;
+    --accent-text: var(--color-blue-30);
   }
 }
 
@@ -80,12 +206,12 @@ html {
 }
 
 body {
-  background-color: #B7E0FC;
-  background-image: url('/media/img/thunderbird/backgrounds/forest-bg-light.jpg');
+  background-color: var(--bg);
+  background-image: var(--bg-img);
   background-position: top left;
-  background-size: auto 400px;
+  background-size: auto 500px;
   background-repeat: repeat-x;
-  color: var(--text);
+  color: var(--txt);
   position: relative;
   margin: 0;
   padding: 0;
@@ -94,30 +220,29 @@ body {
   line-height: 1.6;
 }
 
-@media (prefers-color-scheme: dark) {
-  body {
-    background-color: #204571;
-    background-image: url('/media/img/thunderbird/backgrounds/forest-bg-dark.jpg');
-  }
-}
-
-header {
-  margin: 0 auto;
-  max-width: 200ch;
-}
-
 #initAppeal {
-  display: grid;
-  grid-template-columns: 1fr auto;
-  gap: 2em;
-  padding: 1em;
-  margin-bottom: 4em;
+  display: flex;
+  gap: 9px;
+  margin: 0 auto;
+  margin-bottom: 100px;
+  padding: 24px;
+  max-width: 1000px;
   align-items: center;
+  font-size: 1rem;
 }
 
-@media (max-width: 800px) {
+#initAppeal p strong {
+  font-size: 1.1rem;
+}
+
+#initAppeal h1 {
+  font-size: 5rem;
+  line-height: 1;
+}
+
+@media (max-width: 720px) {
   #initAppeal {
-    grid-template-columns: 1fr;
+    flex-direction: column-reverse;
     justify-items: center;
   }
 }
@@ -125,7 +250,21 @@ header {
 main {
   padding: 1em;
   margin: 0 auto;
-  max-width: 100ch;
+  max-width: 800px;
+  position: relative;
+}
+
+#bg-gradient {
+  position: absolute;
+  inset: 0;
+  top: 500px;
+  background-image: linear-gradient(rgba(76,177,249,0.2), var(--color-blue-40));
+  z-index: -1;
+}
+@media (prefers-color-scheme: dark) {
+  #bg-gradient {
+    background-image: linear-gradient(rgba(19,115,217,0.2), var(--color-blue-90));
+  }
 }
 
 .accent-text {
@@ -133,113 +272,155 @@ main {
 }
 
 #illustration > svg {
-  max-width: 400px;
-  max-height: 400px;
+  max-width: 300px;
+  height: auto;
 }
 
 .donate-banner {
-  --accent-text: #7F1D1D;
+  --accent-text: var(--color-red-80);
 
-  background: rgb(255,59,59);
-  background-image: url('/media/img/thunderbird/backgrounds/hearts-bg.png'),
-                    linear-gradient(125deg, rgba(255,59,59,1) 0%, rgba(168,33,33,1) 45%, rgba(255,230,230,1) 45%, rgba(255,241,241,1) 100%);
+  background: var(--color-red-50);
+  background-image: linear-gradient(125deg, var(--color-red-50) 0%, var(--color-red-70) 45%, var(--color-red-10) 45%, var(--color-gray-10) 100%);
   background-position: top left, center;
   background-size: contain;
   background-repeat: no-repeat;
   border-radius: 3px;
+  box-shadow: 4px 4px 24px rgba(0,0,0,0.15);
   color: white;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 1em;
+  display: flex;
+  justify-content: space-between;
   font-size: 1.25rem;
-  padding: 1em;
-  margin: 2em;
-  margin-top: -75px;
+  padding: 12px;
+  margin: 0 auto;
+  margin-top: -114px;
   text-decoration: none;
-  box-shadow: var(--shadow);
+  text-shadow: var(--shadow);
   transition: transform 0.3s ease-in-out;
   position: relative;
   overflow: hidden;
+  width: 400px;
+  height: 100px;
+  z-index: 10;
 }
 
 .donate-banner:hover {
   transform: scale(1.05);
+  animation: .5s background-fill forwards ease-out;
 }
 
-.donate-banner:hover > #decoration > #pill-1 {
-  animation: 5s infinite alternate pill-float;
+@keyframes background-fill {
+  from {
+    background-size: 100%;
+  }
+
+  to {
+    background-size: 300%;
+    background-color: var(--color-red-70);
+  }
+}
+
+.donate-banner:hover #decoration,
+.donate-banner:hover #donate-banner-right {
+  opacity: 0;
+}
+
+.donate-banner:hover #donate-banner-left {
+  transform: translate(24px, 12px);
+}
+
+#donate-banner-left,
+#donate-banner-right {
+  transition: all .5s ease-in-out;
+  z-index: 1;
+}
+
+#donate-banner-left > strong {
+  font-size: 2rem;
+}
+
+#donate-banner-right > strong {
+  font-size: 1.5rem;
+  font-weight: 400;
+}
+
+#decoration > #pill-1 {
+  animation: 20s infinite pill-float linear;
   animation-delay: 0.2s;
 }
 
-.donate-banner:hover > #decoration > #pill-2 {
-  animation: 5s infinite alternate pill-float;
+#decoration > #pill-2 {
+  animation: 30s infinite pill-float linear;
 }
 
-.donate-banner:hover > #decoration > #pill-3 {
-  animation: 5s infinite alternate pill-float;
+#decoration > #pill-3 {
+  animation: 35s infinite pill-float linear;
   animation-delay: 0.1s;
 }
 
-.donate-banner:hover > #decoration > #pill-4 {
-  animation: 5s infinite alternate pill-float;
+#decoration > #pill-4 {
+  animation: 25s infinite pill-float linear;
   animation-delay: 0.3s;
 }
 
-.donate-banner:hover > #decoration > #pill-5 {
-  animation: 5s infinite alternate pill-float;
+#decoration > #pill-5 {
+  animation: 40s infinite pill-float linear;
   animation-delay: 0.4s;
 }
 
-.donate-banner:hover > #decoration > #pill-6 {
-  animation: 5s infinite alternate pill-float;
+#decoration > #pill-6 {
+  animation: 30s infinite pill-float linear;
   animation-delay: 0.5s;
 }
 
-.donate-banner:hover > #decoration > #pill-7 {
-  animation: 5s infinite alternate pill-float;
+#decoration > #pill-7 {
+  animation: 25s infinite pill-float linear;
   animation-delay: 0.6s;
 }
 
-.donate-banner:hover > #decoration > #pill-8 {
-  animation: 5s infinite alternate pill-float;
+#decoration > #pill-8 {
+  animation: 20s infinite pill-float linear;
   animation-delay: 0.7s;
 }
 
-.donate-banner:hover > #decoration > #pill-9 {
-  animation: 5s infinite alternate pill-float;
+#decoration > #pill-9 {
+  animation: 40s infinite pill-float linear;
   animation-delay: 0.8s;
 }
 
-.donate-banner:hover > #decoration > #pill-10 {
-  animation: 5s infinite alternate pill-float;
+#decoration > #pill-10 {
+  animation: 35s infinite pill-float linear;
   animation-delay: 0.4s;
 }
 
 #decoration {
   position: absolute;
+  left: -70px;
   display: grid;
+  gap: 3px;
   grid-template-columns: repeat(20, 1fr);
   grid-template-rows: repeat(10, 1fr);
   place-items: stretch;
-  height: 100px;
+  height: 90px;
   width: 500px;
   transform: rotate(-55deg);
+  transition: opacity .5s ease-in-out;
 }
 
 .pill {
   display: block;
-  background: rgba(255,59,59,0.75);
+  background: var(--color-red-40);
+  opacity: 0.75;
   border-radius: 1000px;
-  transform: translateX(-50px);
+  transform: translateX(-250px);
 }
 
 @keyframes pill-float {
   from {
-    transform: translateX(-50px);
+    transform: translateX(-250px);
   }
 
   to {
-    transform: translateX(100px);
+    transform: translateX(250px);
   }
 }
 
@@ -294,19 +475,93 @@ main {
   grid-row: 4 / span 1;
 }
 
+#hover-hearts {
+  position: absolute;
+  top: 30px;
+  right: 36px;
+  display: none;
+  gap: 3px;
+}
+
+#hover-heart-1,
+#hover-heart-2,
+#hover-heart-3 {
+  display: flex;
+  align-items: end;
+  opacity: 0;
+}
+
+#hover-heart-1 > svg {
+  animation-delay: 0.6s;
+}
+
+#hover-heart-3 {
+  animation-delay: 0.8s;
+}
+
+#hover-heart-1 > svg {
+  transform: rotate(-45deg);
+  width: 48px;
+  height: 48px;
+}
+
+#hover-heart-2 > svg {
+  width: 64px;
+  height: 64px;
+  transform: translateY(-9px);
+}
+
+#hover-heart-3 > svg {
+  transform: rotate(45deg);
+  width: 48px;
+  height: 48px;
+}
+
+.donate-banner:hover #hover-hearts {
+  display: flex;
+}
+
+.donate-banner:hover #hover-hearts > #hover-heart-1 {
+  animation: 2s heart-fade forwards ease-in-out;
+  animation-delay: 0.4s;
+}
+
+.donate-banner:hover #hover-hearts > #hover-heart-2 {
+  animation: 2s heart-fade forwards ease-in-out;
+  animation-delay: 0.3s;
+}
+
+.donate-banner:hover #hover-hearts > #hover-heart-3 {
+  animation: 2s heart-fade forwards ease-in-out;
+  animation-delay: 0.5s;
+}
+
+@keyframes heart-fade {
+  from {
+    opacity: 0;
+    transform: translateY(12px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 .letter-container {
-  padding: 2em;
+  padding: 60px;
   background: var(--bg);
   border-radius: 6px;
   box-shadow: var(--shadow);
   position: relative;
+  margin-bottom: 121px;
 }
 
 .letter-container:before {
   content: '';
   position: absolute;
-  background: #2493EF;
-  background-image: linear-gradient(127deg, #00FFFF, #DB00FF);
+  background: var(--color-blue-50);
+  background-image: linear-gradient(127deg, var(--color-teal-50), var(--color-magenta-50));
   inset: -4px;
   border-radius: 12px;
   filter: blur(64px);
@@ -314,48 +569,66 @@ main {
   z-index: -1;
 }
 
+.letter-container p:nth-child(2) {
+  margin-top: 30px;
+}
+
+.letter-container p:nth-child(4) {
+  margin-bottom: 90px;
+}
+
 .heart-container {
-  color: hotpink;
+  color: var(--color-red-50);
   display: grid;
   grid-template-columns: 1fr auto 1fr;
-  gap: 1em;
-  place-items: center;
+  gap: 9px;
+  align-items: start;
   margin-top: 2em;
 }
 
 @media (prefers-color-scheme: dark) {
   .heart-container {
-    color: pink;
+    color: var(--color-red-30);
   }
 }
 
 .line {
   display: block;
   height: 1px;
-  border-top: 1px solid dodgerblue;
+  width: 100%;
+  border-top: 1px solid var(--color-blue-60);
 }
 
 .left-lines,
 .right-lines {
-  display: grid;
-  gap: 1px;
-  place-self: stretch;
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+  justify-self: stretch;
+}
+
+.left-lines {
+  align-items: end;
 }
 
 .left-lines > .line:nth-child(2) {
-  margin-left: 3em;
-  margin-right: 0.25em;
+  width: 50%;
+  margin-right: 3px;
+  border-top: 1px solid var(--color-blue-50);
 }
 
 .left-lines > .line:nth-child(1) {
-  margin-left: 6em;
+  width: 30%;
+  border-top: 1px solid var(--color-blue-40);
 }
 
 .right-lines > .line:nth-child(2) {
-  margin-right: 3em;
-  margin-left: 0.25em;
+  width: 50%;
+  margin-left: 3px;
+  border-top: 1px solid var(--color-blue-50);
 }
 
 .right-lines > .line:nth-child(1) {
-  margin-right: 6em;
+  width: 30%;
+  border-top: 1px solid var(--color-blue-40);
 }
