--- a/website/includes/new/page.html
+++ b/website/includes/new/page.html
@@ -21,6 +21,7 @@
       </a>
       <div class="nav-links">
         <a href="{{ url('support') }}" class="nav-ln">{{_('Get Help')}}</a>
+        <a href="{{ url('thunderbird.115.whatsnew') }}" class="nav-ln">{{_('What’s New')}}</a>
         <a href="{{ donate_url('header') }}" class="nav-ln" data-donate-btn
           data-donate-content="header">{{_('Donate')}}</a>
         <div>
