--- a/website/includes/new/site-footer.html
+++ b/website/includes/new/site-footer.html
@@ -39,6 +39,12 @@
         </small>
         {% endtrans %}
       </p>
+      <small><a href="{{ url('contribute') }}" data-link-type="footer"
+        data-link-name="Contribute to this site">{{ _('Contribute to this site') }}</a></small>
+      {% if LANG != 'en-US' %}
+      &bull; <small><a href="https://pontoon.mozilla.org/{{ LANG }}/thunderbirdnet/LC_MESSAGES/messages.po/"
+        data-link-type="footer" data-link-name="Translate this site">{{ _('Translate this site') }}</a></small>
+        {% endif %}
     </div>
     <aside>
       {% include 'includes/lang_switcher.html' %}
