Display the old download links below the download button on the frontpage. (Fixes #483)

--- a/assets/css/115-homepage.css
+++ b/assets/css/115-homepage.css
@@ -685,10 +685,6 @@ button:hover::after {
   margin-block: 40px;
 }
 
-p.download-other.download-other-desktop.os_android.os_ios.os_linux.os_linux64.os_osx.os_win.os_win64.os_winsha1 {
-  display: none !important;
-}
-
 .site-nav {
   box-sizing: border-box;
   position: fixed;
@@ -1481,4 +1477,14 @@ footer {
   .btn-newsletter-icon {
     display: inline-block;
   }
+}
+
+.download-other {
+  text-align: center;
+  transform: translateX(20px);
+  margin-top: -1rem;
+}
+
+.small-link {
+  font-size: 80%;
 }
