--- a/website/includes/new/page.html
+++ b/website/includes/new/page.html
@@ -25,7 +25,7 @@
         <a href="{{ donate_url('header') }}" class="nav-ln" data-donate-btn
           data-donate-content="header">{{_('Donate')}}</a>
         <div>
-          {{ download_thunderbird(force_direct=true, alt_copy=_('Download')) }}
+          {{ download_thunderbird(force_direct=true, hide_footer_links=true, alt_copy=_('Download')) }}
         </div>
       </div>
     </div>
