--- a/website/includes/new/page.html
+++ b/website/includes/new/page.html
@@ -24,7 +24,7 @@
         <a href="{{ url('thunderbird.115.whatsnew') }}" class="nav-ln">{{_('What’s New')}}</a>
         <a href="{{ donate_url('header') }}" class="nav-ln" data-donate-btn
           data-donate-content="header">{{_('Donate')}}</a>
-        <div>
+        <div class="header-download">
           {{ download_thunderbird(force_direct=true, hide_footer_links=true, alt_copy=_('Download')) }}
         </div>
       </div>
